2011-10-29  Ulrich Drepper  <drepper@gmail.com>

	* posix/sys/wait.h: Mark wait and wait4 with __THROWNL.
	* libio/stdio.h: Mark sprintf, vsprintf snprintf, vsnprintf, vasprintf,
	asprintf, __asprintf, obstack_printf, obstack_vprintf with __THROWNL.

2011-07-03  Andreas Jaeger  <aj@suse.de>

	[BZ #10709]
	* sysdeps/ieee754/dbl-64/s_sin.c (__sin): Fix incorrect rounding
	of sin. Patch suggested by Paul Zimmermann <zimmerma+gcc@loria.fr>.
	* math/libm-test.inc (sin_test): Add test case.

2011-10-29  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13337]
	* elf/sprof.c (load_shobj): Correctly NUL-terminate link name.
	Patch by Thomas Jarosch <thomas.jarosch@intra2net.com>.

	* elf/chroot_canon.c (chroot_canon): Cleanups.

	* elf/dl-lookup.c (_dl_setup_hash): Avoid warning.

	[BZ #13335]
	* elf/chroot_canon.c (chroot_canon): Fix readlink call.
	Patch by Thomas Jarosch <thomas.jarosch@intra2net.com>.

	* string/test-strchr.c: Make usable for strchrnul testing.
	* string/test-strchrnul.c: New file.
	* string/Makefile (strop-tests): Add strchrnul.

	* po/it.po: Update from translation team.
	* po/es.po: Likewise.

2011-10-28  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/multiarch/strstr.c (__m128i_strloadu_tolower): Take
	the three constants needed as parameters.  Drop the others.
	(strcasestr_sse42): Load uclow, uchigh, and lcqword and pass to
	__m128i_strloadu_tolower.
	Create and initialize variable zero and use it in all the places
	where _mm_setzero_si128 was used.

	* sysdeps/x86_64/fpu/multiarch/Makefile: Don't build brandred-avx.c,
	doasin-avx.c, dosincos-avx.c, e_asin-avx.c, mpatan-avx.c,
	mpatan2-avx.c, mpsqrt-avx.c, mptan-avx.c, sincos32-avx.c.
	* sysdeps/x86_64/fpu/multiarch/e_asin.c: There are no _avx variants
	anymore.
	* sysdeps/x86_64/fpu/multiarch/e_atan2-avx.c: Don't redirect __mpatan2.
	* sysdeps/x86_64/fpu/multiarch/s_atan-avx.c: Don't redirect __mpatan.
	* sysdeps/x86_64/fpu/multiarch/s_sin-avx.c: Don't redirect __branred,